<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="a">A.</string>
    <string name="b">B.</string>
    <string name="c">C.</string>
    <string name="d">D.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="appname">CS314 QuizApp</string>
    <string name="authors">Caleb Tebbe &amp; Zach Kaplan</string>
    <string name="startQuiz">Start Quiz</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="previous">Prev</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_question2">Question 2</string>
    <string name="title_activity_question3">Question 3</string>
    <string name="title_activity_question1">Question 1</string>
    <string name="title_activity_question4">Question 4</string>
    <string name="title_activity_question5">Question 5</string>
    <string name="title_activity_question6">Question 6</string>
    <string name="title_activity_question7">Question 7</string>
    <string name="title_activity_question8">Question 8</string>
    <string name="title_activity_question9">Question 9</string>
    <string name="title_activity_question10">Question 10</string>

</resources>