<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Question2" >

    <EditText
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonA"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/questionText"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/a" />

    <EditText
        android:id="@+id/answerA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/questionText"
        android:layout_alignTop="@+id/buttonA"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/buttonA"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/answerB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerA"
        android:layout_alignRight="@+id/answerA"
        android:layout_alignTop="@+id/buttonB"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonB"
        android:layout_below="@+id/buttonB"
        android:layout_marginTop="30dp"
        android:text="@string/c" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonA"
        android:layout_below="@+id/buttonA"
        android:layout_marginTop="30dp"
        android:text="@string/b" />

    <EditText
        android:id="@+id/answerC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerB"
        android:layout_alignRight="@+id/answerB"
        android:layout_alignTop="@+id/buttonC"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonC"
        android:layout_below="@+id/buttonC"
        android:layout_marginTop="30dp"
        android:text="@string/d" />

    <EditText
        android:id="@+id/answerD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerC"
        android:layout_alignRight="@+id/answerC"
        android:layout_alignTop="@+id/buttonD"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/previous" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/previous"
        android:layout_alignBottom="@+id/previous"
        android:layout_centerHorizontal="true"
        android:text="@string/finish" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/finish"
        android:layout_alignBottom="@+id/finish"
        android:layout_alignParentRight="true"
        android:text="@string/next" />

</RelativeLayout>